Added notes to clearly mark code found elsewhere and added to the site

--- a/about-this-project.html
+++ b/about-this-project.html
@@ -36,7 +36,7 @@
                 <!--Navigation-->
                 <div class="col-6">   
                     <nav class="navbar navbar-expand-lg nav-position mobile-links">
-                        <!--Mobile Nav-->
+                        <!--Mobile Nav code found on W3 Schools and referenced in README file-->
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-label="Opens mobile navigation">
                             <span class="navbar-toggler-icon"></span>
 
@@ -97,7 +97,7 @@
             </div>
 
             <div class="col-12 faq-size">
-               
+         <!--Accordion- code found on Bootstrap's JS site and referenced in README file-->      
                 <div id="accordion">
                     <div class="card">
                             <div class="card-header faq-btn" id="headingOne">
@@ -158,7 +158,7 @@
                         </div>
                     </div>
                 </div>
-
+            <!--Accordion- code found on Bootstrap's JS site and referenced in README file-->    
         </div>
 
     </section>
