--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <!--Navigation-->
                 <div class="col-6">   
                     <nav class="navbar navbar-expand-lg nav-position mobile-links">
-                        <!--Mobile Nav-->
+                        <!--Mobile Nav code found on W3 Schools and referenced in README file-->
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar" aria-label="Opens mobile navigation">
                             <span class="navbar-toggler-icon"></span>
 
