--- a/poetry.html
+++ b/poetry.html
@@ -42,7 +42,7 @@
 
                             <i class="fas fa-bars icon"></i>
                         </button>
-                        <!--Mobile Nav-->
+                        <!--Mobile Nav code found on W3 Schools and referenced in README file-->
                         <div class="collapse navbar-collapse" id="collapsibleNavbar">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
