Add image metadata

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     
-    <title>Poems Around Galway: Milestone 1</title>
+    <title>Poems Around Galway</title>
+
+    <meta property="og:image" content="/assets/images/galway-banner.jpg"/>'
 </head>
 
 <body>
