Update meta image

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="/assets/images/galway-banner.jpg"/>
 
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
@@ -18,7 +19,6 @@
     
     <title>Poems Around Galway</title>
 
-    <meta property="og:image" content="/assets/images/galway-banner.jpg"/>'
 </head>
 
 <body>
