Add Am I Responsive image for the image meta

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="/assets/images/galway-banner.jpg"/>
+    <meta property="og:image" content="http://ami.responsivedesign.is/?url=https%3A%2F%2Fchristine-gk416.github.io%2Fpoems-around-galway%2F"/>
 
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
