Add site metadata

--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:image" content="http://ami.responsivedesign.is/?url=https%3A%2F%2Fchristine-gk416.github.io%2Fpoems-around-galway%2F"/>
+   
+
+    <meta property='og:title' content='Poems Around Galway' />
+    <meta property="og:image" 
+    content="assets/images/poems-around-meta.png"/>
+    <meta property='og:description' content='Poems around Galway is a site to built to learn and explore the poetic history of Galway city.' />
+    <meta property='og:url' content='https://christine-gk416.github.io/poems-around-galway/index.html' />
 
     
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"/>
